finally fix the navbar gap. fixed using inline-block instead of inline

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -96,8 +96,7 @@ a:visited {
     height: 44px;
     ul {
       width: 980px;
-      height: 24px;
-      padding: 10px 0px 10px 0px;
+      padding: 0;
       // Eliminates the space between list items.
       font-size: 0;
       color: white;
@@ -106,7 +105,8 @@ a:visited {
         padding: 10px 30px 10px 30px;
         font-size: 20px;
         text-align: center;
-        display: inline;
+        line-height: 24px;
+        display: inline-block;
         list-style-type: none;
         border-left: 1px solid white;
         position: relative;
